force-app/main/default/objects/Airport__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the airport is located.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>