force-app/main/default/objects/Airport__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the airport is located.</description>
    <label>Country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>