force-app/main/default/objects/Airport__c/fields/IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Code__c</fullName>
    <description>Unique 3-letter IATA code representing the airport (e.g., EZE, MIA, JFK).</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the official 3-letter airport code.</inlineHelpText>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>