force-app/main/default/objects/Airport__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the airport is currently operating flights for SkyHigh.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>